# multi-agent

./: pyproject.toml
learning-path-generator/: .env.example  .gitignore  README.md  main.py
learning-path-generator/app/: config.py  main.py
learning-path-generator/app/agents/: base_agent.py  curriculum_agent.py  planner_agent.py  resource_finder.py
learning-path-generator/app/api/: routes.py
learning-path-generator/app/graph/: builder.py  resource_subgraph.py  state.py
learning-path-generator/app/prompts/: curriculum.yaml  planner.yaml  resource_finder.yaml
learning-path-generator/app/schemas/: curriculum_schema.py  planner_schema.py  request_schema.py  resource_schema.py
learning-path-generator/app/tools/: github_search.py  utils.py  web_search.py  youtube_search.py
resume-analyser/: .env.example  README.md  requirements.txt
resume-analyser/app/: main.py
resume-analyser/app/agents/: base_agent.py  feedback_agent.py  job_fetcher_agent.py  job_recommendation.py  parser_agent.py  scoring_agent.py  skills_agent.py
resume-analyser/app/api/: routes.py
resume-analyser/app/core/: config.py  errors.py  logger.py
resume-analyser/app/graph/: builder.py  state.py
resume-analyser/app/prompts/: feedback_agent.yaml  job_query.yaml  job_recommendation_agent.yaml  parser_agent.yaml  scoring_agent.yaml  skills_agent.yaml
resume-analyser/app/tools/: job_search.py  pdf_extractor.py
resume-analyser/app/validator/: pdf_validator.py
